--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
     </div>
 
-    <!--<div class="sisalto" id="lukittu">-->
+    <div id="lukittu">
 
         <!--NIMI + LOGO-->
 
@@ -194,6 +194,20 @@
                 </div>
             </div>
 
+            <!-- hinta chart -->
+            <div class="container py-4">
+                <div class="card flex-fill w-100 draggable">
+                    <div class="card-header">
+                        <h5 class="card-title mb-0">Recent Movement</h5>
+                    </div>
+                    <div class="card-body py-3">
+                        <div class="chart chart-sm"><div class="chartjs-size-monitor"><div class="chartjs-size-monitor-expand"><div class=""></div></div><div class="chartjs-size-monitor-shrink"><div class=""></div></div></div>
+                            <canvas id="chartjs-dashboard-line" style="display: block; height: 252px; width: 428px;" width="856" height="504" class="chart-line chartjs-render-monitor"></canvas>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <!-- Description Section -->
             <div class="row mt-4">
                 <div class="col-12">
@@ -219,19 +233,6 @@
     
     </div>
 
-    <!-- hinta chart -->
-    <div class="container py-4">
-        <div class="card flex-fill w-100 draggable">
-            <div class="card-header">
-                <h5 class="card-title mb-0">Recent Movement</h5>
-            </div>
-            <div class="card-body py-3">
-                <div class="chart chart-sm"><div class="chartjs-size-monitor"><div class="chartjs-size-monitor-expand"><div class=""></div></div><div class="chartjs-size-monitor-shrink"><div class=""></div></div></div>
-                    <canvas id="chartjs-dashboard-line" style="display: block; height: 252px; width: 428px;" width="856" height="504" class="chart-line chartjs-render-monitor"></canvas>
-                </div>
-            </div>
-        </div>
-    </div>
     
     <footer class="footer text-center">
         <div class="container">
