--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <div class="stat-card bg-light">
                         <div class="d-flex align-items-center">
                             <div class="mr-3">
-                                <i class="fas fa-users stat-icon"></i>
+                                <i class="fas bi-chat-quote stat-icon"></i>
                             </div>
                             <div>
                                 <div class="stat-value" id="symbol"><!-- symboli --></div>
@@ -77,7 +77,7 @@
                     <div class="stat-card bg-light">
                         <div class="d-flex align-items-center">
                             <div class="mr-3">
-                                <i class="fas fa-shopping-cart stat-icon"></i>
+                                <i class="fas bi-building stat-icon"></i>
                             </div>
                             <div>
                                 <div class="stat-value" id="sector"><!-- sektori --></div>
@@ -90,7 +90,7 @@
                     <div class="stat-card bg-light">
                         <div class="d-flex align-items-center">
                             <div class="mr-3">
-                                <i class="fas fa-dollar-sign stat-icon"></i>
+                                <i class="fas bi-journal-text stat-icon"></i>
                             </div>
                             <div>
                                 <div class="stat-value" id="porssi"><!-- pörssilistaus --></div>
