--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             </div>
 
             <!-- Statistics Cards -->
-            <div class="row g-4">
+            <div class="row g-4 " >
                 <!-- Hinta kortti -->
                 <div class="col-12 col-md-6 col-lg-3">
                     <div class="card stat-card border-0 shadow-sm">
@@ -196,10 +196,12 @@
 
             <!-- hinta chart -->
             <div class="container py-4">
+                <!-- Header -->
+                <div class="d-flex justify-content-between align-items-center mb-4">
+                    <h4 class="mb-0">Recent Movement</h4>
+                </div>
                 <div class="card flex-fill w-100 draggable">
                     <div class="card-header">
-                        <!-- Otsikko -->
-                        <h5 class="card-title mb-0">Recent Movement</h5>
                         <!-- alasvetovalikko -->
                         <div class="btn-group alasveto">
                             <select id="alasveto" class="form-select" style="max-width: 150px;">
