--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                     <input name="kentta" id="kentta" type="text" class="form-control search-input" placeholder="Type stock ticker to search...">
                     <i class="bi bi-search position-absolute top-50 end-0 translate-middle-y me-3"></i>
                 </div>
+                <p id="error" class="text-danger"></p>
             </form>
 
             <div class="recent-searches pt-3">
@@ -46,7 +47,7 @@
         <!--NIMI + LOGO-->
 
         
-        <div class="container text-center logonimi">
+        <div id="bodyAlku" class="container text-center logonimi">
             <div class="row nimilogorivi">
                 <div class="col-md-4">
                     <div id="logo"><!--Logo tähän--></div>
